# sapiens-labs

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dune  dune-project  package-lock.json  package.json  sapiens.opam  sapiens.opam.locked  sapiens.opam.template
asset/: dune  manifest.json
lib/annotation_tool/: dune  helper.ml  io.ml  remote_data.ml  router.ml  sapiens_annotation_tool.ml  use.ml
lib/annotation_tool/components/: app.ml  error.ml  layout.ml  tool_checkboxes.ml  tool_image.ml  tool_number.ml  tool_radios.ml  tool_text.ml
lib/annotation_tool/lwd/: lwd_syntax.ml  tyxml.ml  tyxml_lwd_pure.ml  tyxml_lwd_pure.mli
lib/backend/: config.ml  dune  error.ml  helper.ml  repo.ml  repo.mli  sapiens_backend.ml  token.ml
lib/backend/account/: account.ml  account.mli  account_user.ml  account_user.mli  account_user_notifier.ml  account_user_notifier.mli  account_user_token.ml  account_user_token.mli
lib/backend/annotation/: annotation.ml  annotation.mli  annotation_annotation.ml  annotation_task.ml  annotation_task.mli
lib/backend/dataset/: dataset.ml  dataset.mli  dataset_collaborator.ml  dataset_collaborator.mli  dataset_datapoint.ml  dataset_datapoint.mli  dataset_dataset.ml  dataset_dataset.mli  dataset_permissions.ml  dataset_permissions.mli  dataset_token.ml  dataset_token.mli  dataset_user_notifier.ml  dataset_user_notifier.mli
lib/backend/model/: model.ml  model.mli  model_model.ml  model_model.mli
lib/backend/upload/: upload.ml  upload.mli  upload_backend.ml
lib/std/: dune  (+1 more)
lib/web/: common.ml  config.ml  cookies.ml  dune  router.ml  sapiens_web.ml
lib/web/handlers/: dataset_handler.ml  model_handler.ml  page_handler.ml  search_handler.ml  task_handler.ml  user_auth_handler.ml  user_confirmation_handler.ml  user_registration_handler.ml  user_reset_password_handler.ml  user_session_handler.ml  user_settings_handler.ml
lib/web/middlewares/: error_handler_middleware.ml  error_handler_middleware.mli  user_auth_middleware.ml  user_auth_middleware.mli
lib/web/opium/: flash.ml  middleware_flash.ml  middleware_logger.ml
lib/web/templates/: alert.ml  collaborator_table.ml  dataset_card.ml  dataset_card_grid.ml  dataset_empty.ml  dataset_layout.ml  input.ml  layout.ml  marketing_hero.ml  marketing_layout.ml  marketing_navbar.ml  model_table.ml  panel.ml  progress_bar.ml  task_table.ml  user_task_table.ml
lib/web/views/: annotation_tool_view.ml  dataset_settings_view.ml  dataset_show_view.ml  dataset_task_view.ml  dataset_view.ml  error_view.ml  model_view.ml  page_about_view.ml  page_consulting_view.ml  page_jobs_view.ml  page_landing_view.ml  page_pricing_view.ml  page_view.ml  search_view.ml  task_view.ml  user_confirmation_view.ml  user_login_view.ml  user_registration_view.ml  user_reset_password_view.ml  user_settings_view.ml
test/sapiens_web/: dune
test/sapiens_web/handlers/: dataset_handler_test.ml  page_handler_test.ml  user_auth_handler_test.ml  user_confirmation_handler_test.ml  user_registration_handler_test.ml  user_reset_password_handler_test.ml  user_session_handler_test.ml  user_settings_handler_test.ml
test/sapiens_web/middlewares/: user_auth_middleware_test.ml
(+44 files in other folders)
